<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Downloader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_download">Download</string>
    <string name="downloadProgress">Dowloadfortschritt:</string>
    <string name="percent">%</string>
    <string name="finishedDownload">Download abgeschlossen!</string>
    <string name="zeroPercent">0%</string>
    <string name="download_erfolgreich">Download erfolgreich</string>
    <string name="download_running">Download läuft bereits</string>
    <string name="url_needed">Bitte Download-URL angeben!</string>
    <string name="save_name_needed">Bitte Speichername angeben!</string>
    <string name="notification_header">Download</string>
    <string name="stop">Stop</string>
    <string name="download_url">Download-URL</string>
    <string name="url_preselection">http://www.wallzbucket.com/data/media/100/Sexy_Girl9275.jpg</string>
    <string name="save_file_name">Speichername</string>
    <string name="progress">Ladefortschritt</string>
    
    <string name="error_service_general">Fehler beim Verbindungsaufbau</string>
    <string name="error_service_download">Datei konnte nicht gelesen werden</string>
    <string name="error_service_url_filepath">Ungültige URL \n\n (Dateipfad konnte nicht gefunden werden)</string>
    <string name="error_service_url_host">Ungültige URL \n\n (Host konnte nicht gefunden werden)</string>
    <string name="error_service_url_structure">Ungültige URL \n\n (Struktur der URL fehlerhaft)</string>

</resources>
